--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>hyellloo?</title>
+        <title>HAPPY BIRTHDAY</title>
     </head>
     <body>
-        <h1>ermmmm what the scallop</h1>
+        <h1>HAPPY BIRTHDAY</h1>
     </body>
 </html>
