--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>HAPPY BIRTHDAY</h1>
-        <img src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 50%>
+        <img src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 100px>
     </body>
 </html>
