--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
         <h1>HAPPY BIRTHDAY</h1>
         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/43553156&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/silviomilan95" title="SicK" target="_blank" style="color: #cccccc; text-decoration: none;">SicK</a> · <a href="https://soundcloud.com/silviomilan95/happy-birthday-remix" title="Happy Birthday Remix" target="_blank" style="color: #cccccc; text-decoration: none;">Happy Birthday Remix</a></div>
         <img class = "my-img" src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 100px>
+        <img src = "https://www.funimada.com/assets/images/cards/big/bday-643.gif">
+        <img src = "https://media.tenor.com/iiUkghcg0noAAAAd/jerma-breakdance.gif">
     </body>
 </html>
