--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
         <img class = "my-img" src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 100px>
         <img src = "https://www.funimada.com/assets/images/cards/big/bday-643.gif">
         <img src = "https://media.tenor.com/iiUkghcg0noAAAAd/jerma-breakdance.gif">
+        <br>
+        <h2>YOU ARE THE NUMBER ONE DAD HAPPY BIRTH</h2>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">CLICK HERE FOR BIRTHDAY SURPRISE!?!???!</a>
+        <img class = "my-img" src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 100px>
+        <img class = "my-img" src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 100px>
+        <img class = "my-img" src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 100px>
     </body>
 </html>
