--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2>YOU ARE THE NUMBER ONE DAD HAPPY BIRTH</h2>
         <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">CLICK HERE FOR BIRTHDAY SURPRISE!?!???!</a>
         <img class = "my-img" src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 100px>
-        <img class = "my-img" src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 100px>
-        <img class = "my-img" src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 100px>
+        <img class = "my-img" src = "https://res.cloudinary.com/hz3gmuqw6/image/upload/c_fill,q_auto,w_750/f_auto/25-unique-birthday-gifts-they-wont-return-phpIHJzgU">
+        <img class = "my-img2" src = "https://cf.ltkcdn.net/celebrations/parties/images/orig/341607-1600x1066-birthday-party-names-1001540940.jpg" width = 100px>
     </body>
 </html>
