--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>HAPPY BIRTHDAY</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Arbutus&display=swap" rel="stylesheet">
     </head>
     <body>
         <h1>HAPPY BIRTHDAY</h1>
