--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
         <img class = "my-img" src = "https://img.freepik.com/free-vector/celebratory-balloons-isolated-background_1284-52282.jpg?" width = 100px>
         <img class = "my-img" src = "https://res.cloudinary.com/hz3gmuqw6/image/upload/c_fill,q_auto,w_750/f_auto/25-unique-birthday-gifts-they-wont-return-phpIHJzgU">
         <img class = "my-img2" src = "https://cf.ltkcdn.net/celebrations/parties/images/orig/341607-1600x1066-birthday-party-names-1001540940.jpg" width = 100px>
+        <br>
+        <img src = "https://www.google.com/url?sa=i&url=https%3A%2F%2Fredandhowling.com%2F2020%2F03%2F11%2Fhappy-birthday-gif%2F&psig=AOvVaw2hk0RNOUt2FWfYibYmQx82&ust=1694315419233000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCICX5PnGnIEDFQAAAAAdAAAAABAF">
+        <img src = "https://media.tenor.com/iCgOuohU11kAAAAC/dancing-polish-cow-at4am.gif">
+        <img src = "https://media.tenor.com/jpEA11k7CucAAAAd/kermit-practice.gif">
+        <br>
+        <img class = "big" src = "https://assets-global.website-files.com/5a6a34c2920f950001f51775/646be9b24dc26ab5b5772bc5_i1yG3lHAsOIRkkzk8zLXSRBF9ENpwf-v-nTOqcV0rqo.webp">
     </body>
 </html>
